syntax = "proto3";

package object;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";

message Lifeline {
    option (gogoproto.equal) = false;

    bytes LatestState = 1 [(gogoproto.customtype) = "github.com/insolar/insolar/insolar.ID", (gogoproto.nullable) = true];
    bytes LatestStateApproved = 2 [(gogoproto.customtype) = "github.com/insolar/insolar/insolar.ID", (gogoproto.nullable) = true];
    bytes ChildPointer = 3 [(gogoproto.customtype) = "github.com/insolar/insolar/insolar.ID", (gogoproto.nullable) = true];
    bytes Parent = 4 [(gogoproto.customtype) = "github.com/insolar/insolar/insolar.Reference", (gogoproto.nullable) = false];
    repeated LifelineDelegate Delegates = 5 [(gogoproto.nullable) = false];
    uint32 StateID = 6 [(gogoproto.customtype) = "github.com/insolar/insolar/insolar/record.StateID", (gogoproto.nullable) = false];
    uint32 LatestUpdate = 7 [(gogoproto.customtype) = "github.com/insolar/insolar/insolar.PulseNumber", (gogoproto.nullable) = false];
    bytes JetID = 8 [(gogoproto.customtype) = "github.com/insolar/insolar/insolar.JetID", (gogoproto.nullable) = false];

    bytes LatestRequest = 9 [(gogoproto.customtype) = "github.com/insolar/insolar/insolar.ID", (gogoproto.nullable) = true];
}

message LifelineDelegate {
    bytes Key = 1 [(gogoproto.customtype) = "github.com/insolar/insolar/insolar.Reference", (gogoproto.nullable) = false];
    bytes Value = 2 [(gogoproto.customtype) = "github.com/insolar/insolar/insolar.Reference", (gogoproto.nullable) = false];
}

